#65 increasing internal wiringPi priority to hope the thread priority  will make sure interrupts from pi4j are handled first all the time